@@ -1095,7 +1095,10 @@ dimnames.data.table = function(x) {
     caller = as.character(sys.call(-2))[1]
     if ( ((tt<-identical(caller,"colnames<-")) && cedta(3)) ||
          cedta() ) warning("The ",if(tt)"col","names(x)<-value syntax copies the whole table. This is due to <- in R itself. Please change to setnames(x,old,new) which does not copy and is faster. See help('setnames'). You can safely ignore this warning if it is inconvenient to change right now. Setting options(warn=2) turns this warning into an error, so you can then use traceback() to find and change your ",if(tt)"col","names<- calls.")
-    setnames(x,value)
+    if (is.null(value))
+        setattr(x,"names",NULL)   # e.g. plyr::melt() calls base::unname() 
+    else
+        setnames(x,value)
     x   # it's this returned value that is copied via *tmp* and we cannot avoid that when using <- currently in R
 }
 
